--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -13,7 +13,9 @@
   .popup__title {
     font-size: 18px;
     line-height: 22px;
-    margin-left: 6px;
+    margin-top: 30px;
+    margin-left: 20px;
     margin-right: auto;
+    margin-bottom: 36px;
   }
 }
