--- a/pages/index.css
+++ b/pages/index.css
@@ -14,6 +14,7 @@
 @import url('../blocks/elements/elements.css');
 @import url('../blocks/element/element.css');
 @import url('../blocks/element/__image/element__image.css');
+@import url('../blocks/element/__delete/element__delete.css');
 @import url('../blocks/element/__place/element__place.css');
 @import url('../blocks/element/__point/element__point.css');
 @import url('../blocks/element/__like/element__like.css');
@@ -21,9 +22,13 @@
 @import url('../blocks/footer/__copyright/footer__copyright.css');
 @import url('../blocks/popup/popup.css');
 @import url('../blocks/popup/_opened/popup_opened.css');
+@import url('../blocks/popup/_opened/popup_opened-place.css');
+@import url('../blocks/popup/_opened/popup_opened-image.css');
 @import url('../blocks/popup/__container/popup__container.css');
 @import url('../blocks/popup/__title/popup__title.css');
 @import url('../blocks/popup/__text/popup__text.css');
 @import url('../blocks/popup/__close/popup__close.css');
 @import url('../blocks/popup/__save/popup__save.css');
-
+@import url('../blocks/popup/__big-image/popup__big-image.css');
+@import url('../blocks/popup/__image-container/popup__image-container.css');
+@import url('../blocks/popup/__image-name/popup__image-name.css');
