--- a/blocks/popup/__text/popup__text.css
+++ b/blocks/popup/__text/popup__text.css
@@ -10,7 +10,7 @@
   size: 27px;
   margin-block-start: 0;
   margin-block-end: 0;
-  margin: 0 auto 30px 36px;
+  margin: 15px auto 0 36px;
   border: none;
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
   text-align: start;
