--- a/pages/index.css
+++ b/pages/index.css
@@ -23,12 +23,16 @@
 @import url('../blocks/footer/footer.css');
 @import url('../blocks/footer/__copyright/footer__copyright.css');
 @import url('../blocks/popup/popup.css');
+@import url('../blocks/popup/__error/popup__error.css');
+@import url('../blocks/popup/__error/_active/popup__error_active.css');
 @import url('../blocks/popup/_opened/popup_opened.css');
 @import url('../blocks/popup/__container/popup__container.css');
 @import url('../blocks/popup/__title/popup__title.css');
 @import url('../blocks/popup/__text/popup__text.css');
+@import url('../blocks/popup/__text/_error/popup__text_error.css');
 @import url('../blocks/popup/__close/popup__close.css');
 @import url('../blocks/popup/__save/popup__save.css');
+@import url('../blocks/popup/__save/_inactive/popup__save_inactive.css');
 @import url('../blocks/popup/__big-image/popup__big-image.css');
 @import url('../blocks/popup/__image-container/popup__image-container.css');
 @import url('../blocks/popup/__image-name/popup__image-name.css');
