--- a/src/blocks/profile/__avatar/profile__avatar.css
+++ b/src/blocks/profile/__avatar/profile__avatar.css
@@ -2,13 +2,12 @@
   width: 120px;
   height: 120px;
   border-radius: 50%;
-  grid-column-start: 2;
-  grid-column-end: 3;
+  position: relative;
+  z-index: 3;
 }
 
-@media screen and (max-width: 715px) {
-  .profile__avatar{
-    margin-bottom: 7px;
-    justify-self: center;
-  }
+.profile__avatar:hover {
+  opacity: 0.2;
+  z-index: 1;
 }
+
